Upgraded Spring Boot, dependencies, and gradle